--- a/PalladiumDwh.ClientApp/Properties/Resources.resx
+++ b/PalladiumDwh.ClientApp/Properties/Resources.resx
@@ -172,6 +172,9 @@
   <data name="apple_icon_precomposed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\apple-icon-precomposed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brake_warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brake-warning.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dwh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dwh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
